# llm-code-debate

./: .gitignore  Dockerfile  README.md  config.yaml  debate_results.db  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh  validate_tests.py
hpc/: EXPERIMENTS.md  README.md  _lib_run.sh  run_7b_judge.sh  run_7b_judge2.sh  run_7b_judge2_no_adaptive_temp.sh  run_7b_judge2_r1.sh  run_7b_no_judge.sh  run_7b_no_judge2.sh  run_7b_no_judge2_no_adaptive_temp.sh  run_9b_judge.sh  run_9b_judge2.sh  run_9b_judge2_no_adaptive_temp.sh  run_9b_judge2_r1.sh  run_9b_no_judge.sh  run_9b_no_judge2.sh  run_9b_no_judge2_no_adaptive_temp.sh  run_all6_solo.sh  run_experiment.sh  run_web.sh  singularity.def
results/: per_round_7b_judge2_217799.csv  per_round_7b_judge2_no_adaptive_temp_232579.csv  per_round_7b_judge2_r1_217802.csv  per_round_7b_judge_217665.csv  per_round_7b_no_judge2_217798.csv  per_round_7b_no_judge2_no_adaptive_temp_232578.csv  per_round_7b_no_judge_217629.csv  per_round_9b_judge2_217801.csv  per_round_9b_judge2_no_adaptive_temp_232581.csv  per_round_9b_judge2_r1_217803.csv  per_round_9b_judge_217685.csv  per_round_9b_no_judge2_217800.csv  per_round_9b_no_judge2_no_adaptive_temp_232580.csv  per_round_9b_no_judge_217684.csv  per_round_all6_solo_217797.csv  summary_7b_judge2_217799.csv  summary_7b_judge2_no_adaptive_temp_232579.csv  summary_7b_judge2_r1_217802.csv  summary_7b_judge_217665.csv  summary_7b_no_judge2_217798.csv  summary_7b_no_judge2_no_adaptive_temp_232578.csv  summary_7b_no_judge_217629.csv  summary_9b_judge2_217801.csv  summary_9b_judge2_no_adaptive_temp_232581.csv  summary_9b_judge2_r1_217803.csv  summary_9b_judge_217685.csv  summary_9b_no_judge2_217800.csv  summary_9b_no_judge2_no_adaptive_temp_232580.csv  summary_9b_no_judge_217684.csv  summary_all6_solo_217797.csv
(+182 files in other folders)
